--- a/DoAn/ComputerStore/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/DoAn/ComputerStore/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -301,6 +301,12 @@
                             </a>
                         </li>
                         <li>
+                            <a href="~/Admin/Categories/Index" class="waves-effect">
+                                <i class="remixicon-bill-fill"></i>
+                                <span> Danh mục </span>
+                            </a>
+                        </li>
+                        <li>
                             <a href="~/Admin/ChatMessages/Index" class="waves-effect">
                                 <i class="remixicon-messenger-fill"></i>
                                 <span class="badge badge-pink badge-pill float-right">5</span>
@@ -350,6 +356,6 @@
     <!-- third party js ends -->
     <!-- Datatables init -->
     <script src="assets\js\pages\datatables.init.js"></script>
-    @Scripts.Render("~/assets_admin/js/pages/dashboards-1.init.js")
+    @Scripts.Render("~/assets_admin/js/pages/dashboards-edit.init.js")
 </body>
 </html>
